homer/homer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  labels:
    app: homer
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: homer-pod
  template:
    metadata:
      labels:
        app: homer-pod
    spec:
      containers:
        - name: homer
          image: b4bz/homer:v23.05.1
          ports:
            - containerPort: 8080
              name: http-homer
          resources:
            limits:
              memory: 100Mi
              cpu: 100m
            requests:
              cpu: 5m
              memory: 25Mi
          volumeMounts:
            - mountPath: /www/assets/config.yml
              subPath: config.yml
              name: config-volume
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: homer-config
